mobilemenu,arrow img,menu logo

--- a/src/Catering.css
+++ b/src/Catering.css
@@ -1,6 +1,7 @@
 /* ---------- MAIN SECTION ---------- */
 .catering {
   padding: 80px 10%;
+  position: relative;
   background: #ffffff;
 }
 
@@ -11,13 +12,10 @@
   margin: 0 auto 60px;
 }
 
-.catering-arrow {
-  width: 150px;
-  margin-bottom: 10px;
-}
+
 
 .catering-subtitle {
-  color: #ff7a2f;
+  color: gray;
   letter-spacing: 2px;
   text-transform: uppercase;
   font-size: 14px;
@@ -123,7 +121,7 @@
 
 /* ARROW ICON */
 .arrow-icon {
-  position: absolute;
+  position: relative;
   top: 18px;
   right: 18px;
   width: 36px;
@@ -152,3 +150,41 @@
     font-size: 32px;
   }
 }
+/* SHOW ARROW IMAGE ONLY FROM 1140px AND ABOVE */
+@media (max-width: 1139px) {
+  .catering-arrow {
+    display: none;
+  }
+}
+/* TILT ARROW IMAGE */
+.catering-arrow {
+  width: 150px;
+  margin-bottom: 10px;
+    transform: rotate(300deg);
+    transition: transform 0.4s ease;
+    position: absolute;
+    top: 172px;
+    left: 254px;
+
+
+    opacity: 0;                      /* start hidden */
+  animation: arrowShow 0.6s ease forwards;
+  animation-delay: 2s; 
+}
+ 
+
+@keyframes arrowShow {
+  from {
+    opacity: 0;
+    transform: translateY(12px) rotate(300deg);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0) rotate(300deg);
+  }
+}
+
+
+
+
+
