--- a/src/App.css
+++ b/src/App.css
@@ -55,9 +55,9 @@ button {
 }
 
 /* ================= SCROLLBAR (OPTIONAL) ================= */
-::-webkit-scrollbar {
+/* ::-webkit-scrollbar {
   width: 8px;
-}
+} */
 
 ::-webkit-scrollbar-track {
   background: #f1f1f1;
