--- a/src/Client.css
+++ b/src/Client.css
@@ -32,6 +32,24 @@ height: inherit;
   margin-bottom: 50px;
 }
 
+/* YOUR HIGHLIGHT */
+/* DISCOVER HIGHLIGHT */
+.client-text h3 .discover {
+  position: relative;
+  color: #ffffff !important;   /* Discover text WHITE */
+  z-index: 1;
+}
+
+.client-text h3 .discover::before {
+  content: "";
+  position: absolute;
+  left: -8px;
+  bottom: 6px;
+  width: calc(100% + 16px);
+  height: 22px;
+  background: #ff7a3d;         /* ORANGE BAR */
+  z-index: -1;
+}
 .client-text h5 {
   font-size: 13px;
   letter-spacing: 2px;
@@ -51,7 +69,7 @@ height: inherit;
 }
 
 .client-text h3 span {
-  color: #ff7a3d;
+  color: #ff9b6a;
 }
 
 /* Arrow buttons */
@@ -170,3 +188,9 @@ height: inherit;
   position:   unset;
   padding: 10px;
 }}
+@media (max-width: 720px) {
+  .client-text h3 .discover::before {
+    height: 18px;
+    bottom: 4px;
+  }
+}
