--- a/src/Customizedfaqs.css
+++ b/src/Customizedfaqs.css
@@ -113,6 +113,22 @@
   object-fit: cover;
   border-radius: 26px;
 }
+.common {
+  position: relative;
+  color:black !important;        /* orange text */
+  z-index: 1;
+}
+
+.common::before {
+  content: "";
+  position: absolute;
+  left: -8px;
+  bottom: 6px;
+  width: calc(100% + 16px);
+  height: 22px;
+  background: white;  /* white bar */
+  z-index: -1;
+}
 
 /* RESPONSIVE */
 @media (max-width: 1024px) {
@@ -141,5 +157,11 @@
   .faq-images img {
     width: 100%;
     height: 260px;
+  }
+}
+@media (max-width: 600px) {
+  .common:before {
+    height: 18px;
+    bottom: 4px;
   }
 }
