--- a/src/GetVoucher.css
+++ b/src/GetVoucher.css
@@ -108,3 +108,27 @@
   font-size: 15px;
   cursor: pointer;
 }
+/* FLEXIBLE HIGHLIGHT */
+/* YOUR HIGHLIGHT */
+.your {
+  position: relative;
+  color: #ffffff !important;   /* force WHITE text */
+  z-index: 1;
+}
+
+.your::before {
+  content: "";
+  position: absolute;
+  left: -8px;
+  bottom: 20px;
+  width: calc(100% + 16px);
+  height: 22px;
+  background: #ff7a3d;         /* orange bar */
+  z-index: -1;
+}
+@media (max-width: 600px) {
+  .your::before {
+    height: 18px;
+    bottom: 20px;
+  }
+}
